[gd_scene load_steps=13 format=2]

[ext_resource path="res://main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Start_Side.gd" type="Script" id=2]
[ext_resource path="res://46441(1).png" type="Texture" id=3]
[ext_resource path="res://DEJAVUSANS.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=8]
size = 33
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.403922 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=5]
resource_name = "Hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Side_bar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.2974, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -55, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TabContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.2974, 1 ),
"update": 0,
"values": [ Vector2( 25, -32 ), Vector2( 0, -32 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Side_bar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -55, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TabContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Side_bar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.366022, 2.2974 ),
"update": 0,
"values": [ Vector2( -55, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TabContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.366022, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 25, -32 ) ]
}

[node name="Start_Side" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -100.0
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_bottom = 8.0
mouse_filter = 1

[node name="Log_Ind_valg" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="VBoxContainer" parent="TabContainer/Log_Ind_valg"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -169.0
margin_top = -185.0
margin_right = 169.0
custom_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="TabContainer/Log_Ind_valg/HBoxContainer"]
margin_top = 42.0
margin_right = 338.0
margin_bottom = 82.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 1 )
text = "Log ind som elev"

[node name="Button2" type="Button" parent="TabContainer/Log_Ind_valg/HBoxContainer"]
margin_top = 102.0
margin_right = 338.0
margin_bottom = 142.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 1 )
text = "Log ind som lærer"

[node name="Log_Ind" type="Tabs" parent="TabContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 500.0

[node name="HBoxContainer" type="VBoxContainer" parent="TabContainer/Log_Ind"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -169.0
margin_top = -236.0
margin_right = 169.0
custom_constants/separation = 20
alignment = 1

[node name="Button" type="LineEdit" parent="TabContainer/Log_Ind/HBoxContainer"]
margin_top = 38.0
margin_right = 338.0
margin_bottom = 78.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 1 )
placeholder_text = "Brugernavn"

[node name="Button2" type="LineEdit" parent="TabContainer/Log_Ind/HBoxContainer"]
margin_top = 98.0
margin_right = 338.0
margin_bottom = 138.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 1 )
secret = true
placeholder_text = "Adgangskode"

[node name="Button3" type="Button" parent="TabContainer/Log_Ind/HBoxContainer"]
margin_top = 158.0
margin_right = 338.0
margin_bottom = 198.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 1 )
text = "Log ind"

[node name="Elev_Side" type="Tabs" parent="TabContainer"]
margin_right = 1024.0
margin_bottom = 500.0

[node name="ColorRect" type="ColorRect" parent="TabContainer/Elev_Side"]
anchor_right = 1.0
margin_left = -23.0
margin_right = 1241.0
margin_bottom = 57.0
theme = ExtResource( 1 )
color = Color( 0.172549, 0.207843, 0.266667, 1 )

[node name="Label" type="Label" parent="TabContainer/Elev_Side/ColorRect"]
margin_left = 68.0
margin_top = 9.0
margin_right = 872.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 8 )
text = "Hej fuckfjæs"

[node name="CenterContainer" type="CenterContainer" parent="TabContainer/Elev_Side"]
anchor_right = 1.0
margin_top = 19.0
margin_right = 2.0
margin_bottom = 199.0

[node name="Button3" type="Button" parent="TabContainer/Elev_Side/CenterContainer"]
margin_left = 413.0
margin_top = 70.0
margin_right = 613.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"

[node name="Panel" type="Panel" parent="TabContainer/Elev_Side"]
margin_left = -27.0
margin_top = 160.0
margin_right = 1376.0
margin_bottom = 213.0

[node name="Label" type="Label" parent="TabContainer/Elev_Side/Panel"]
margin_left = 75.0
margin_top = 16.0
margin_right = 242.0
margin_bottom = 35.0
theme = ExtResource( 1 )
text = "Tilgængelige tests"

[node name="Panel2" type="Panel" parent="TabContainer/Elev_Side"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -27.0
margin_top = 214.0
margin_right = 1032.0
margin_bottom = 639.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Elev_Side/Panel2"]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 3.0
margin_right = 1052.0
margin_bottom = -514.0
theme = ExtResource( 1 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Elev_Side/Panel2/ScrollContainer"]
margin_right = 500.0
margin_bottom = 590.0
custom_constants/separation = 10

[node name="Button3" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Mat test 1a1 - Linære Funktioner"
align = 0

[node name="Button4" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 500.0
margin_bottom = 90.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button5" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 500.0
margin_bottom = 140.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button6" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 500.0
margin_bottom = 190.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button7" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 500.0
margin_bottom = 240.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button8" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 500.0
margin_bottom = 290.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button9" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 340.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button10" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 500.0
margin_bottom = 390.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button11" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 500.0
margin_bottom = 440.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button12" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 500.0
margin_bottom = 490.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button13" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 500.0
margin_bottom = 540.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Button14" type="Button" parent="TabContainer/Elev_Side/Panel2/ScrollContainer/VBoxContainer"]
margin_top = 550.0
margin_right = 500.0
margin_bottom = 590.0
rect_min_size = Vector2( 500, 40 )
theme = ExtResource( 1 )
text = "Se tidligere tests"
align = 0

[node name="Side_bar" type="Control" parent="."]
margin_left = -55.0
margin_right = -7.0
margin_bottom = 526.0

[node name="ColorRect" type="ColorRect" parent="Side_bar"]
anchor_bottom = 1.833
margin_right = 48.0
margin_bottom = 64.0
color = Color( 0.172549, 0.207843, 0.266667, 1 )

[node name="Back_Button" type="Button" parent="Side_bar"]
margin_right = 48.0
margin_bottom = 48.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Side_bar/Back_Button"]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 44.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/Hide = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/Show = SubResource( 7 )

[connection signal="pressed" from="TabContainer/Log_Ind_valg/HBoxContainer/Button" to="." method="go_to_tab" binds= [ 1 ]]
[connection signal="pressed" from="TabContainer/Log_Ind_valg/HBoxContainer/Button2" to="." method="go_to_tab" binds= [ 1 ]]
[connection signal="pressed" from="TabContainer/Log_Ind/HBoxContainer/Button3" to="." method="go_to_tab" binds= [ 2 ]]
[connection signal="pressed" from="Side_bar/Back_Button" to="." method="go_back"]
